[ 002 ] Updated index.html
Added some simple introduction in index.html page.

--- a/html/template.html
+++ b/html/template.html
@@ -4,8 +4,8 @@
 		<meta charset='UTF-8'>
 
 		<!-- SECTION: Style -->
-		<link rel='stylesheet' href='./css/style.css' type='text/css' media='screen'>
-		<link rel='stylesheet' href='./css/color.css' type='text/css' media='screen'>
+		<link rel='stylesheet' href='./../css/style.css' type='text/css' media='screen'>
+		<link rel='stylesheet' href='./../css/color.css' type='text/css' media='screen'>
 
 		<!-- SECTION: Font -->
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata" rel="stylesheet">
@@ -13,19 +13,19 @@
 		<!-- SECTION: Icons -->
 		<script src="https://kit.fontawesome.com/3b830dc2f9.js" crossorigin="anonymous"></script>
 
-		<title>@itsYakub - portfolio</title>
+		<title>@itsYakub - template</title>
 	</head>
 	<body class='colorbg-darkgray'>
 		<div class='page-content colorbg-white'>
 			<!-- SECION: Header -->
 			<div class='header'>
 				<div class='left'>
-					<a class='color-darkgray' href='./index.html' target="_blank">Jakub (@Yakub) Oleksiak</a>
+					<a class='color-darkgray' href='./../index.html' target="_blank">Jakub (@Yakub) Oleksiak</a>
 				</div>
 				<div class='right'>
-					<a class='color-gray' href='./html/about.html' target="_blank">About Me</a>
-					<a class='color-gray' href='./html/showcase.html' target="_blank">Project Showcase</a>
-					<a class='color-gray' href='./html/articles.html' target="_blank">Articles</a>
+					<a class='color-gray' href='./../html/about.html' target="_blank">About Me</a>
+					<a class='color-gray' href='./../html/showcase.html' target="_blank">Project Showcase</a>
+					<a class='color-gray' href='./../html/articles.html' target="_blank">Articles</a>
 				</div>
 			</div>
 
@@ -35,12 +35,7 @@
 			<br>
 
 			<div class='content'>
-				<p>Hello, I'm Jakub, alias @Yakub.</p>
-				<p>I'm a 21-years-old developer who's interested in low-level programming.</p>
-				<p>You can read more about me in <a class='color-gray' href='./html/about.html' target="_blank">About Me</a> section.</p>
-				<p>Check out <a class='color-gray' href='./html/showcase.html' target="_blank">Project Showcase</a> for the projects and tools I've made.</p>
-				<p>Lastly, I like to write some articles which you can check out in <a class='color-gray' href='./html/articles.html' target="_blank">Articles</a> section.</p>
-				<p>Have a nice day!</p>
+				<p>Placeholder</p>
 			</div>
 			
 			<br>
