--- a/index.html
+++ b/index.html
@@ -18,23 +18,20 @@
 	<body class='colorbg-darkgray'>
 		<div class='page-content colorbg-white'>
 			<!-- SECION: Header -->
-			<div class='header'>
-				<div class='left'>
+			<div id='header'>
+				<div class='div-left'>
 					<a class='color-darkgray' href='./index.html' target="_blank">Jakub (@Yakub) Oleksiak</a>
 				</div>
-				<div class='right'>
-					<a class='color-gray' href='./html/about.html' target="_blank">About Me</a>
-					<a class='color-gray' href='./html/showcase.html' target="_blank">Project Showcase</a>
-					<a class='color-gray' href='./html/articles.html' target="_blank">Articles</a>
+				<div class='div-right'>
+					<a class='color-gray' id='a-nav' href='./html/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!' target="_blank"><i class="fa-solid fa-person"></i></a>
+					<a class='color-gray' id='a-nav' href='./html/showcase.html' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!' target="_blank"><i class="fa-solid fa-computer"></i></a>
+					<a class='color-gray' id='a-nav' href='./html/articles.html' data-toggle="tooltip" data-placement="bottom" title='Articles!' target="_blank"><i class="fa-solid fa-newspaper"></i></a>
 				</div>
 			</div>
+			<hr class='color-lightgray'>
 
 			<!-- SECION: Content -->
-			<br>
-			<hr class='color-gray'>
-			<br>
-
-			<div class='content'>
+			<div id='content'>
 				<p>Hello, I'm Jakub, alias @Yakub.</p>
 				<p>I'm a 21-years-old developer who's interested in low-level programming.</p>
 				<p>You can read more about me in <a class='color-gray' href='./html/about.html' target="_blank">About Me</a> section.</p>
@@ -42,31 +39,17 @@
 				<p>Lastly, I like to write some articles which you can check out in <a class='color-gray' href='./html/articles.html' target="_blank">Articles</a> section.</p>
 				<p>Have a nice day!</p>
 			</div>
-			
-			<br>
-			<hr class='color-gray'>
-			<br>
 
 			<!-- SECION: Footer -->
-			<div class='footer'>
-				<a class='color-gray' href='https://github.com/itsYakub' target="_blank">
-					<i class="fa-brands fa-github"></i>
-				</a>
-				<a class='color-gray' href='https://gitlab.com/itsYakub' target="_blank">
-					<i class="fa-brands fa-gitlab"></i>
-				</a>
-				<a class='color-gray' href='https://www.linkedin.com/in/jakub-oleksiak-369625329' target="_blank">
-					<i class="fa-brands fa-linkedin"></i>
-				</a>
-				<a class='color-gray' href='https://www.facebook.com/profile.php?id=100017373458550' target="_blank">
-					<i class="fa-brands fa-facebook"></i>
-				</a>
-				<a class='color-gray' href='https://x.com/YakubButOnTwt' target="_blank">
-					<i class="fa-brands fa-twitter"></i>
-				</a>
-				<a class='color-gray' href='https://youtube.com/' target="_blank">
-					<i class="fa-brands fa-youtube"></i>
-				</a>
+			<!-- TODO(yakub): Put the footer at the bottom of the webpage -->
+			<hr class='color-lightgray'>
+			<div class='div-center' id='footer'>
+				<a class='color-gray' id='a-nav' href='https://github.com/itsYakub' target="_blank"><i class="fa-brands fa-github"></i></a>
+				<a class='color-gray' id='a-nav' href='https://gitlab.com/itsYakub' target="_blank"><i class="fa-brands fa-gitlab"></i></a>
+				<a class='color-gray' id='a-nav' href='https://www.linkedin.com/in/jakub-oleksiak-369625329' target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+				<a class='color-gray' id='a-nav' href='https://www.facebook.com/profile.php?id=100017373458550' target="_blank"><i class="fa-brands fa-facebook"></i></a>
+				<a class='color-gray' id='a-nav' href='https://x.com/YakubButOnTwt' target="_blank"><i class="fa-brands fa-twitter"></i></a>
+				<a class='color-gray' id='a-nav' href='https://youtube.com/' target="_blank"><i class="fa-brands fa-youtube"></i></a>
 			</div>
 		</div>
 	</body>
