--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset='UTF-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- SECTION: Style -->
 		<link rel='stylesheet' href='./css/style.css' type='text/css' media='screen'>
@@ -23,26 +24,24 @@
 					<a class='color-darkgray' href='./index.html' target="_blank">Jakub (@Yakub) Oleksiak</a>
 				</div>
 				<div class='div-right'>
-					<a class='color-gray' id='a-nav' href='./html/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!' target="_blank"><i class="fa-solid fa-person"></i></a>
-					<a class='color-gray' id='a-nav' href='./html/showcase.html' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!' target="_blank"><i class="fa-solid fa-computer"></i></a>
-					<a class='color-gray' id='a-nav' href='./html/articles.html' data-toggle="tooltip" data-placement="bottom" title='Articles!' target="_blank"><i class="fa-solid fa-newspaper"></i></a>
+					<a class='color-darkgray' id='a-nav' href='./html/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!' target="_blank"><i class="fa-solid fa-person"></i></a>
+					<a class='color-darkgray' id='a-nav' href='./html/showcase.html' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!' target="_blank"><i class="fa-solid fa-computer"></i></a>
+					<a class='color-darkgray' id='a-nav' href='./html/articles.html' data-toggle="tooltip" data-placement="bottom" title='Articles!' target="_blank"><i class="fa-solid fa-newspaper"></i></a>
 				</div>
 			</div>
-			<hr class='color-lightgray'>
 
-			<!-- SECION: Content -->
+			<!-- SECION: Main -->
 			<div id='content'>
 				<p>Hello, I'm Jakub, alias @Yakub.</p>
 				<p>I'm a 21-years-old developer who's interested in low-level programming.</p>
-				<p>You can read more about me in <a class='color-gray' href='./html/about.html' target="_blank">About Me</a> section.</p>
-				<p>Check out <a class='color-gray' href='./html/showcase.html' target="_blank">Project Showcase</a> for the projects and tools I've made.</p>
-				<p>Lastly, I like to write some articles which you can check out in <a class='color-gray' href='./html/articles.html' target="_blank">Articles</a> section.</p>
+				<p>You can read more about me in <a class='color-darkgray' href='./html/about.html' target="_blank">About Me</a> section.</p>
+				<p>Check out <a class='color-darkgray' href='./html/showcase.html' target="_blank">Project Showcase</a> for the projects and tools I've made.</p>
+				<p>Lastly, I like to write some articles which you can check out in <a class='color-darkgray' href='./html/articles.html' target="_blank">Articles</a> section.</p>
 				<p>Have a nice day!</p>
 			</div>
 
 			<!-- SECION: Footer -->
 			<!-- TODO(yakub): Put the footer at the bottom of the webpage -->
-			<hr class='color-lightgray'>
 			<div class='div-center' id='footer'>
 				<a class='color-gray' id='a-nav' href='https://github.com/itsYakub' target="_blank"><i class="fa-brands fa-github"></i></a>
 				<a class='color-gray' id='a-nav' href='https://gitlab.com/itsYakub' target="_blank"><i class="fa-brands fa-gitlab"></i></a>
