[ 007 ] Icon and Title change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata" rel="stylesheet">
 
 		<!-- SECTION: Icons -->
+		<link rel="icon" type="image/x-icon" href="img/icon.png">
 		<script src="https://kit.fontawesome.com/3b830dc2f9.js" crossorigin="anonymous"></script>
 
 		<title>@itsYakub - portfolio</title>
@@ -21,7 +22,7 @@
 			<!-- SECION: Header -->
 			<div id='header'>
 				<div class='div-left'>
-					<a class='color-darkgray' href='./index.html' target="_blank">Jakub (@Yakub) Oleksiak</a>
+					<a class='color-darkgray' href='./index.html' target="_blank">@Yakub</a>
 				</div>
 				<div class='div-right'>
 					<a class='color-darkgray' id='a-nav' href='./html/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!' target="_blank"><i class="fa-solid fa-person"></i></a>
